Redmine Issue: 687 Specimen Details Style PURPOSE:  contrast

--- a/shared/css/custom_styles.css
+++ b/shared/css/custom_styles.css
@@ -231,8 +231,11 @@ div:focus, div > span:focus {
 	width: 0;
 	overflow: hidden;
 }
+a {
+	color:#006ee3;
+}
 .link-color {
-	color: #007bff;
+	color: #006ee3;
 }
 .brackets {
 	width: 5px;
@@ -326,7 +329,7 @@ button#showRelatedDataBtn.btn-xs {
 	font-size: .875rem;
 	line-height: 1.15rem;
 	border-radius: .2rem;
-	color: #007bff;
+	color: #006ee3;
 }
 .btn-outline-primary {
 	background-color: white;
@@ -754,7 +757,7 @@ body.modal-open {
 	display: block;
 	font-size: 1.1rem;
 	font-weight: 400;
-	color: #007bff;
+	color: #006ee3;
 }
 .cbp-spmenu a:hover {
 	cursor: pointer;
@@ -2031,12 +2034,12 @@ div[aria-hidden='false'] {
 a.btn-outline-primary {
 	background-color: white;
 	padding-bottom: .05rem;
-	color: #007bff;
+	color: #006ee3;
 	text-decoration: none;
 	font-size: .785rem;
 }
 a.btn-outline-primary:hover, a.btn-outline-primary:not(:disabled):not(.disabled):active {
-	background-color: #007bff;
+	background-color: #006ee3;
 	text-decoration: none;
 	color: white !important;
 	padding-bottom: .05rem;
